--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,8 @@ footer {
     font-weight: bold;
     background-color: rgba(0, 49, 83, 0.1);
 }
+
+.badge-devfecta {
+    color: #fff;
+    background-color: #003153;
+}
