--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,79 +1,75 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 1em;
+  width: 100%;
+}
+
+.badge-devfecta {
+  color: #fff;
+  background-color: #003153;
+}
+
+header,
+main,
+footer {
+  margin: 0;
+}
+
 .headerLogo {
-	height: 50px;
-	width: auto;
-	transition: 0.2s;
+  height: 50px;
+  width: auto;
+  transition: 0.2s;
 }
 
 .navbar {
-	box-shadow: #000 0 3px 5px;
+  box-shadow: #000 0 3px 5px;
+}
+header {
+  z-index: 1000;
 }
 
 main {
-	padding-top: 5em;
-	background-color: #003153;
+  padding-top: 5em;
+  background-color: #003153;
 }
 
-
-#serviceArticle {
-
-
-} 
-
-#serviceImage {
-	height: 500px;
-	background-color: #000;
-	background-image: url("/src/images/web-development.jpg");
-	background-size: cover;
-	background-repeat: no-repeat;
-	opacity: 0.4;
-	z-index: 0;
-	position: fixed;
-	top: 0;
-	left: 0;
-	padding: 0;
-	box-shadow: #000 0px 3px 5px;
-	
+section {
+  position: relative;
 }
 
-#serviceIntro {
-	position: relative;
-	font-size: 1.5em;
-	min-height: 300px;
-	height: auto;
-	padding: 2em 0 -2em 0;
+.bg-devfecta {
+  background-color: #003153;
 }
-#serviceIntro p {
-	text-shadow: #000 2px 2px 3px;
+.bg-devfecta-white {
+  background-color: #fff;
 }
-
-#portfolioArticle {
-	background-color: #666;
-	padding: 2em 0;
-	min-height: 50px;
-	box-shadow: #222 0 -3px 5px;
-
-} 
 
 .btn-primary {
-	background-color: #003153;
-	border: #003153 solid 1px;
+  background-color: #003153;
+  border: #003153 solid 1px;
 }
 
 .btn-primary:hover {
-	background-color: #001e33;
-	border: #003153 solid 1px;
+  background-color: #001e33;
+  border: #003153 solid 1px;
 }
 
 footer {
-	background-color: #333;
-	padding: 1em;
+  background-color: #333;
+  padding: 1em;
+  z-index: 1;
+  position: relative;
 }
 
 .serviceCard {
-	box-shadow: #000 3px 3px 5px;
+  box-shadow: #000 3px 3px 5px;
 }
-
-
 
 .App {
   text-align: center;
