Added link to terms and conditions

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -28,6 +28,10 @@ a.nav-link {
   font-weight: normal;
 }
 
+.link-primary {
+  color: #003153;
+}
+
 main a[target="_blank"] {
   font-style: normal;
   font-weight: bold;
