--- a/src/css/App.css
+++ b/src/css/App.css
@@ -100,6 +100,10 @@ footer {
   background-color: #333;
   padding: 1em;
   z-index: 1;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
 }
 
 .card {
