--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -29,3 +29,21 @@
   z-index: 100;
   position: relative;
 }
+
+@media (max-width: 767px) {
+  body {
+    background-color: #003153 !important;
+  }
+  .mapStyle > div {
+    width: 100vw;
+  }
+}
+
+@media (min-width: 768px) {
+  main {
+    background-color: #fff !important;
+  }
+  .mapStyle > div {
+    width: 50vw;
+  }
+}
