Added code for inline code.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -126,6 +126,13 @@ main {
   background-color: #003153;
 }
 
+.zsiq_flt_rel, .zsiq_seasonal .st2 {
+  background-color: #000306 !important;
+}
+.zsiq_flt_rel, .zsiq_seasonal .st2 { 
+  background-color:#00528C !important;
+}
+
 @media (max-width: 991.97px) {
   body {
     background-color: #003153 !important;
