--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -4,7 +4,7 @@
 }
 
 .portfolio-article:nth-child(3n - 1) a {
-  color: #000;
+  
 }
 
 .portfolio-article:nth-child(3n + 0) {
@@ -13,7 +13,7 @@
 }
 
 .portfolio-article:nth-child(3n + 0) a {
-  color: #000;
+  
 }
 
 .portfolio-article:nth-child(3n + 1) {
@@ -22,7 +22,7 @@
 }
 
 .portfolio-article:nth-child(3n + 1) a {
-  color: #fff;
+  
 }
 
 .portfolio-article:hover {
@@ -32,7 +32,7 @@
 }
 
 .portfolio-article:hover a {
-  color: #fff;
+  color: #ff6000;
   transition: all 500ms linear;
 }
 
