--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -4,7 +4,6 @@
 }
 
 .portfolio-article:nth-child(3n - 1) a {
-  
 }
 
 .portfolio-article:nth-child(3n + 1) {
@@ -13,7 +12,6 @@
 }
 
 .portfolio-article:nth-child(3n + 0) a {
-  
 }
 
 .portfolio-article:nth-child(3n + 0) {
@@ -22,7 +20,6 @@
 }
 
 .portfolio-article:nth-child(3n + 1) a {
-  
 }
 
 .portfolio-article:hover {
@@ -32,7 +29,7 @@
 }
 
 .portfolio-article:hover a {
-  color: #ff6000;
+  color: #fff;
   transition: all 500ms linear;
 }
 
